--- a/springboot/angular-clarity-master/angular-clarity-master/package.json
+++ b/springboot/angular-clarity-master/angular-clarity-master/package.json
@@ -27,8 +27,10 @@
     "@clr/ui": "^5.2.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@webcomponents/webcomponentsjs": "^2.5.0",
+    "angular-base64": "^2.0.5",
     "angular-dark-mode": "^3.0.0",
     "angular6-json-schema-form": "^8.0.0",
+    "base-64": "^1.0.0",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
