--- a/springboot/angular-clarity-master/angular-clarity-master/package.json
+++ b/springboot/angular-clarity-master/angular-clarity-master/package.json
@@ -42,10 +42,12 @@
     "jquery-ui-sortable-npm": "^1.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "ngx-drag-drop": "^1.1.0",
     "ngx-toastr": "^13.2.0",
     "numeral": "^2.0.6",
     "rxjs": "~6.6.7",
-    "sweetalert2": "^10.15.5",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.1.6",
     "tslib": "^2.0.0",
     "xlsx": "^0.16.9",
     "zone.js": "^0.10.3"
