--- a/springboot/angular-clarity-master/angular-clarity-master/package.json
+++ b/springboot/angular-clarity-master/angular-clarity-master/package.json
@@ -42,6 +42,7 @@
     "jquery-ui-sortable-npm": "^1.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "ngx-drag-and-drop-lists": "^1.3.2",
     "ngx-drag-drop": "^1.1.0",
     "ngx-toastr": "^13.2.0",
     "numeral": "^2.0.6",
