drag drop new done

--- a/springboot/angular-clarity-master/angular-clarity-master/package.json
+++ b/springboot/angular-clarity-master/angular-clarity-master/package.json
@@ -27,6 +27,8 @@
     "@clr/icons": "^5.2.0",
     "@clr/ui": "^5.2.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@swimlane/ngx-dnd": "^9.0.0",
+    "@toverux/ngx-sweetalert2": "^3.3.1",
     "@webcomponents/webcomponentsjs": "^2.5.0",
     "angular-base64": "^2.0.5",
     "angular-dark-mode": "^3.0.0",
@@ -42,7 +44,6 @@
     "jquery-ui-sortable-npm": "^1.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "ngx-drag-and-drop-lists": "^1.3.2",
     "ngx-drag-drop": "^1.1.0",
     "ngx-toastr": "^13.2.0",
     "numeral": "^2.0.6",
