--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -39,8 +39,8 @@ System.Net.ServicePointManager.Expect100Continue = false;
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.continue-on-error=false
 
-# **** MY SQL DATABASE CONNECTION ****
-spring.datasource.url=jdbc:mysql://cnsmysql.cypv2nuaxsko.ap-south-1.rds.amazonaws.com:3306/realnet
+# **** MY SQL DATABASE CONNECTION ****#realnet
+spring.datasource.url=jdbc:mysql://cnsmysql.cypv2nuaxsko.ap-south-1.rds.amazonaws.com:3306/realnetnavnet   
 #spring.datasource.url=jdbc:mysql://localhost:3306/realnet_latest1
 spring.datasource.username=cnsdev
 spring.datasource.password=cnsdev1234
